# learn_modern_developing

./: .dockerignore  .env.example  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py
django-app/backend/: settings.py
